--- a/package.json
+++ b/package.json
@@ -7,9 +7,19 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "@braid/vue-formulate": "^2.5.3",
+    "aos": "^2.3.4",
+    "axios": "^1.1.3",
     "core-js": "^3.8.3",
+    "cors": "^2.8.5",
+    "dotenv": "^16.0.3",
+    "express": "^4.18.2",
     "vue": "^2.6.14",
+    "vue-animate-onscroll": "^1.0.8",
     "vue-router": "^3.5.1",
+    "vuelidate": "^0.7.7",
+    "vuesax": "^4.0.1-alpha.25",
+    "vuetify": "^2.6.12",
     "vuex": "^3.6.2"
   },
   "devDependencies": {
@@ -19,6 +29,8 @@
     "@vue/cli-service": "~5.0.0",
     "sass": "^1.32.7",
     "sass-loader": "^12.0.0",
-    "vue-template-compiler": "^2.6.14"
+    "vue-cli-plugin-vuetify": "~2.5.8",
+    "vue-template-compiler": "^2.6.14",
+    "vuetify-loader": "^1.7.0"
   }
 }
